# sapphire-api-client

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
src/sapphire_api_client/: __init__.py  client.py  long_term.py  postprocessing.py  postprocessing_base.py  preprocessing.py  short_term.py  validators.py
tests/: __init__.py  test_client.py  test_long_term.py  test_postprocessing.py  test_preprocessing.py  test_short_term.py  test_validators.py
