[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sapphire-api-client"
version = "0.1.0"
description = "Python client for SAPPHIRE Forecast Tools API"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "hydrosolutions", email = "hf@hydrosolutions.ch"}
]
keywords = ["hydrology", "forecasting", "api", "sapphire"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.28.0",
    "pip-audit>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/hydrosolutions/sapphire-api-client"
Repository = "https://github.com/hydrosolutions/sapphire-api-client"
Issues = "https://github.com/hydrosolutions/sapphire-api-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sapphire_api_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
packages = ["sapphire_api_client"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true
